--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "netcraft"
+name = "and"
 version = "0.1.0"
-edition = "2021"
+edition = "2025"
 
 [dependencies]
 clap = { version = "4.4.8", features = ["derive"] }
